@@ -11,13 +11,13 @@ include /usr/share/dpkg/buildflags.mk
 options = export DEBUG=-DNDEBUG DISTRIBUTION=debian \
 	  CONFIG_SHELL=/bin/sh;
 
-LOCAL_CONFIGURE_OPTIONS += --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH)
+confflags += --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH)
 
 # Ensure cross builds succeed
 ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
-  LOCAL_CONFIGURE_OPTIONS += --build $(DEB_HOST_GNU_TYPE)
+  confflags += --build $(DEB_HOST_GNU_TYPE)
 else
-  LOCAL_CONFIGURE_OPTIONS += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
+  confflags += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
 endif
 
 build-arch: build
@@ -33,7 +33,7 @@ config: .census
 	dh_testdir
 	-test -r /usr/share/misc/config.sub && cp -f /usr/share/misc/config.sub config.sub
 	-test -r /usr/share/misc/config.guess && cp -f /usr/share/misc/config.guess config.guess
-	$(options) $(MAKE) configure LOCAL_CONFIGURE_OPTIONS="$(LOCAL_CONFIGURE_OPTIONS)"
+	$(options) $(MAKE) configure LOCAL_CONFIGURE_OPTIONS="$(confflags)"
 	touch .census
 
 clean:
